# W11Boost

./: .clang-format  .editorconfig  .gitattributes  .gitignore  Advanced.ps1  Background Info.adoc  Backup_Registry.bat  CITATION.cff  CMakeLists.txt  CONTRIBUTING.adoc  Cargo.toml  Changelogs.adoc  DEVELOPER.adoc  Install.bat  LICENSE  NOTES.adoc  README.adoc  README.md  Run.bat  TODO.adoc  TuneUp11.bat  TuneUp11.ps1  TuneUp11_Launcher.bat  W11Boost.bat  W11Boost.ps1  W11Boost.sln  W11Boost_Launcher.bat  build.rs  build_release.ps1  build_release.sh  disable_system_exploit_mitigations.xml  imports.ps1  main.ps1  mitigations.xml  network_adapter_tweaks.ps1  rust-toolchain.toml  rustfmt.toml  set_exploit_mitigations.ps1  sonar-project.properties  tests_run.sh
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml
Extras/: Advanced.bat  Advanced.ps1  Apply_STIGs.bat  Apply_STIGs.ps1  Enable_Services.ps1  Enforce_Quad9_DoH.bat  Enforce_Quad9_DoH.ps1  Harden.ps1  Harden_Further.bat  Harden_Further.ps1  IXM.ps1  Install_Xbox_Minimal.bat  Install_Xbox_Minimal.ps1  Microsoft_App_Debloat.bat  Microsoft_App_Debloat.ps1  Remove_Harmful_Software.ps1  Self-hosted_AI.bat  Self-hosted_AI.ps1  Undo_W11Boost.ps1  Uninstall.bat  Uninstall.ps1  W11_LTSC_2022.bat  W11_LTSC_2022.ps1  W11_LTSC_Replica.bat  W11_LTSC_Replica.ps1  WL22.ps1  Xbox_minimal.bat  mitigation-policies.xml
Networking/Ethernet/: no_power_saving.ps1  recommended_tweaks.ps1
Non-GPO Registry/: Deny Screenshots By Apps.reg  Disable Cloud Search.reg  Disable Delivery Optimization.reg  Disable Razer Synapse.reg  Disable SmartScreen.reg  Disable Windows Firewall.reg  Drivers.reg  Enable UAC.reg  Excessive Hardening.reg  Excessive Mitigations.reg  Harden.reg  HiDPI Blurry Font Fix.reg  Hide Nothing.reg  Less Game Stuttering.reg  Mistake Corrections.reg  No Blocked Files.reg  No Edge Autorun.reg  No Game DVR.reg  Old Context Menus.reg  Privacy.reg  Reduce Mitigations.reg  Shutdown.reg  UAC.reg  Unsorted.reg  Visual Studio 2022.reg  avoid_key_annoyances.reg  disable_services.reg  disable_typing_insights.reg  mistake_corrections.reg  no_game_dvr.reg  no_mitigations.reg  performance_options.reg  quicker_shutdown.reg
Non-GPO Registry/Geolocation/: Disable.reg  Enable.reg
Regions/: Annoyances.ps1  GUI.ps1  IMPORTS.ps1  Main.ps1  Privacy.ps1  Repairs.ps1  Stability.ps1  Unsorted.ps1
Registry/: Excessive Mitigations.reg  Performance Options.reg  application_compatibility.reg  disable_CDM.reg  disable_CEIP.reg  disable_WER.reg  mistake_corrections.reg  prevent_microsoft_diagnostics.reg
Registry/Computer Configuration/Administrative Templates/System/: App-V.reg  Device Installation.reg  Filesystem.reg  Group Policy.reg  Internet Communication Management.reg  Mitigation Options.reg  OS Policies.reg  Power Management.reg  Shutdown.reg  Storage Sense.reg  System Restore.reg  User Profiles.reg  Windows Time Service.reg
Registry/Computer Configuration/Administrative Templates/Windows Components/: App Package Deployment.reg  Application Compatibility.reg  Cloud Content.reg  Data Collection and Preview Builds.reg  Microsoft Edge.reg  OneDrive.reg  Text Input.reg  Widgets.reg  Windows Defender SmartScreen.reg  Windows Error Reporting.reg  Windows Security.reg  Windows Update.reg
Registry/Optional/: no_mitigations.reg
Registry/User Configuration/Administrative Templates/: Desktop.reg
W11Boost/: AppxSupport.cc  Common.cc  Common.cppm  Common.h  DisableSleep.cpp  Edits.cc  PrivacyMode.cc  Removal.cc  Resource.h  RestorePoint.cc  W11Boost.aps  W11Boost.cc  W11Boost.rc  W11Boost.vcxproj  W11Boost.vcxproj.filters  targetver.h
docs/: AVOID.md  BAD_TWEAKS.md  CAUTION.md
src/: .clang-format  CMakeLists.txt  Common.c  Common.h  Common.ixx  Edits.c  Edits.ixx  MSStore.c  MSStore.ixx  PrivacyMode.c  PrivacyMode.ixx  Resource.h  RestorePoint.c  RestorePoint.ixx  W11Boost.aps  W11Boost.c  W11Boost.cpp  W11Boost.rc  W11Boost.sln  W11Boost.vcxproj  W11Boost.vcxproj.filters  app.manifest  common.rs  gui.rs  ipc.rs  lib.rs  main.rs  service.rs  service_client.rs  targetver.h  trusted_installer.rs
src/gui/: app.rs  appx_support.rs  config.rs  create_system_restore_point.rs  dark_theme.rs  defaults.rs  disable_copilot.rs  disable_defender_and_smartscreen.rs  disable_recall.rs  disable_sleep.rs  disable_telemetry.rs  disable_vbs.rs  install_appx_support.rs  layout.rs  minimize_forensics.rs  minimize_online_data_collection.rs  mod.rs  non_intrusive_tweaks.rs  reduce_forensics.rs  reduce_local_data_collection.rs  reduce_online_data_collection.rs  remove_w11boost.rs  reset_windows_store.rs  shared_state.rs  state.rs  theme.rs  widgets.rs
src/gui/tweaks/: accessibility.rs  appearance.rs  behavior.rs  boot.rs  bulk.rs  context_menu.rs  debloat.rs  defaults.rs  desktop.rs  edge.rs  explorer.rs  forensics.rs  mod.rs  network.rs  online_data.rs  performance.rs  power.rs  privacy.rs  remove_ai.rs  repair.rs  security.rs  software.rs  sync.rs  third_party_telemetry.rs  tools.rs  updates.rs
tests/: common_tests.rs  feature_modules_tests.rs  gui_tests.rs  integration_tests.rs  validate_defaults.rs
