[package]
name = "W11Boost"
version = "1.7.0"
edition = "2024"
build = "build.rs"
authors = ["felikcat"]
license = "AGPLv3"
repository = "https://github.com/felikcat/W11Boost"
readme = "README.adoc"
description = "♻️ Multi-choice Windows 10 & 11 optimizer / debloater that prioritizes breaking nothing. Also can be uninstalled without backups or reinstalling Windows."
categories = ["os", "os::windows-apis", "security"]
keywords = [
    "audio",
    "games",
    "gaming",
    "optimization",
    "network",
    "tweaks",
    "lag",
    "hardening",
    "security-hardening",
    "tweak",
    "booster",
    "framerate",
    "debloat",
    "frametime",
    "sysadmin-scripts",
    "windows-11",
    "debloater",
    "windows11",
    "win11",
]

[package.metadata.winresource]
CompanyName = "felikcat"
FileDescription = "https://github.com/felikcat/W11Boost"
LegalCopyright = "© 2026 felikcat, AGPL3 License"
OriginalFilename = "W11Boost.exe"
ProductName = "W11Boost"

# Optimize for size.
[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
fltk-theme = "0.7.9"
fltk-observe = "0.1.7"
chrono = "0.4.42"
strum_macros = "0.27.2"
anyhow = "1.0.100"

[build-dependencies]
winresource = "0.1.28"

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.winsafe]
version = "0.0.27"
features = ["user", "shell", "advapi", "kernel"]

[dependencies.fltk]
version = "1.5.22"
features = ["use-ninja"]

[dev-dependencies]
tempfile = "3.24.0"
