[package]
name = "W11Boost"
version = "1.8.0"
edition = "2024"
build = "build.rs"
authors = ["felikcat"]
license = "AGPLv3"
repository = "https://github.com/felikcat/W11Boost"
readme = "README.adoc"
description = "♻️ Multi-choice Windows 10 & 11 optimizer / debloater that prioritizes breaking nothing"
categories = ["os", "os::windows-apis", "security"]
keywords = [
    "audio",
    "games",
    "gaming",
    "optimization",
    "network",
    "tweaks",
    "lag",
    "hardening",
    "security-hardening",
    "tweak",
    "booster",
    "framerate",
    "debloat",
    "frametime",
    "sysadmin-scripts",
    "windows-11",
    "debloater",
    "windows11",
    "win11",
]

[lib]
name = "w11boost"
path = "src/lib.rs"

[[bin]]
name = "W11Boost"
path = "src/main.rs"

[[bin]]
name = "registry-dump"
path = "src/bin/registry-dump.rs"

[package.metadata.winresource]
CompanyName = "felikcat"
FileDescription = "https://github.com/felikcat/W11Boost"
LegalCopyright = "© 2026 felikcat, AGPL3 License"
OriginalFilename = "W11Boost.exe"
ProductName = "W11Boost"

# Optimize for size.
[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.100"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_Registry",
]

[build-dependencies]
winresource = "0.1.28"

[dependencies.winsafe]
version = "0.0.27"
features = ["user", "shell", "advapi", "kernel", "gui", "comctl", "gdi"]

[dev-dependencies]
tempfile = "3.24.0"
