[package]
name = "W11Boost"
version = "2.0.0-dev1"
edition = "2024"
build = "build.rs"
authors = ["felikcat"]
license = "AGPLv3"
repository = "https://github.com/felikcat/W11Boost"
readme = "README.adoc"
description = "♻️ A multi-choice Windows 10/11 optimizer & debloater"
categories = ["os", "os::windows-apis", "security"]
keywords = [
    "audio",
    "games",
    "gaming",
    "optimization",
    "network",
    "tweaks",
    "lag",
    "hardening",
    "security-hardening",
    "tweak",
    "booster",
    "framerate",
    "debloat",
    "frametime",
    "sysadmin-scripts",
    "windows-11",
    "debloater",
    "windows11",
    "win11",
]

[lib]
name = "w11boost"
path = "src/lib.rs"

[[bin]]
name = "W11Boost"
path = "src/main.rs"


[package.metadata.winresource]
CompanyName = "felikcat"
FileDescription = "https://github.com/felikcat/W11Boost"
LegalCopyright = "© 2026 felikcat, AGPL3 License"
OriginalFilename = "W11Boost.exe"
ProductName = "W11Boost"

# A balance between runtime performance, size, and keeping compile times low
[profile.release]
strip = true
opt-level = "z"
lto = "fat"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.33.3", default-features = false, features = [
    "glow",
    "default_fonts",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
rfd = "0.17.1"
raw-window-handle = "0.6"
rayon = "1.11"


[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_System_GroupPolicy",
    "Win32_Graphics_Dwm",
    "Win32_System_Environment",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
]

[build-dependencies]
winresource = "0.1.28"

[dependencies.winsafe]
version = "0.0.27"
features = ["user", "shell", "advapi", "kernel"]

[dev-dependencies]
tempfile = "3.24.0"
